--- a/source/assets/stylesheets/scss/_analytics-feedback.scss
+++ b/source/assets/stylesheets/scss/_analytics-feedback.scss
@@ -51,7 +51,7 @@
 }
 
 .analytics-fb-cards {
-  margin: 35px auto 60px;
+  margin: 35px auto 0px;
 }
 
 .analytics-fd-form-container {
